31140 block about overflow fixed

--- a/src/style/bem-blocks/b-about/b-about.tablet.less
+++ b/src/style/bem-blocks/b-about/b-about.tablet.less
@@ -33,7 +33,9 @@
 
     &__list {
         display: flex;
-        gap: 210px;
+        column-gap: 210px;
+        flex-wrap: wrap;
+        row-gap: 40px;
     }
     &__item {
         position: relative;
